RESOLVED FIXED169545
[Win] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=169545
Summary [Win] Compile fix.
Per Arne Vollan
Reported 2017-03-13 02:20:31 PDT
MSVC warns about inconsistent dll linkage for exported JS functions.
Attachments
Patch (7.37 KB, patch)
2017-03-13 02:23 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-03-13 02:23:43 PDT
Per Arne Vollan
Comment 2 2017-03-13 08:58:40 PDT
Comment on attachment 304244 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 3 2017-03-13 09:26:52 PDT
Comment on attachment 304244 [details] Patch Clearing flags on attachment: 304244 Committed r213846: <http://trac.webkit.org/changeset/213846>
WebKit Commit Bot
Comment 4 2017-03-13 09:26:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.