[Win] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=169545

Reviewed by Brent Fulgham.

Fix inconsistent dll linkage warnings.

* WebKitDLL.cpp:
* WebKitDLL.h:


Canonical link: https://commits.webkit.org/186545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213846 268f45cc-cd09-0410-ab3c-d52691b4dbfc